[WISE-207] Adding test and fixing issue with locally stored wsdls